--- a/apps/arc-app.yaml
+++ b/apps/arc-app.yaml
@@ -12,7 +12,4 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: "arc-systems"
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+  syncPolicy: {}
