--- a/apps/arc-app.yaml
+++ b/apps/arc-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: arc-app
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-options: CreateNamespace=true
 spec:
   project: default
   source:
