--- a/apps/calico-app.yaml
+++ b/apps/calico-app.yaml
@@ -1,15 +1,15 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: calico-app
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: "https://github.com/devopsYo/calico.git"
-    targetRevision: "HEAD"
-    path: "arc"
-  destination:
-    server: "https://kubernetes.default.svc"
-    namespace: "tigera-operator"
-  syncPolicy: {}
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: calico-app
+#  namespace: argocd
+#spec:
+#  project: default
+#  source:
+#    repoURL: "https://github.com/devopsYo/calico.git"
+#    targetRevision: "HEAD"
+#    path: "arc"
+#  destination:
+#    server: "https://kubernetes.default.svc"
+#    namespace: "tigera-operator"
+#  syncPolicy: {}
