--- a/projects/cmdo-project.yaml
+++ b/projects/cmdo-project.yaml
@@ -11,5 +11,9 @@ spec:
   - namespace: '*'
     server: '*'
   clusterResourceWhitelist:
-  - group: "*"
-    kind: "*"
+    - group: "rbac.authorization.k8s.io"
+      kind: "ClusterRole"
+    - group: "rbac.authorization.k8s.io"
+      kind: "ClusterRoleBinding"
+    - group: "apiextensions.k8s.io"
+      kind: "CustomResourceDefinition"
