--- a/projects/cmdo-project.yaml
+++ b/projects/cmdo-project.yaml
@@ -17,3 +17,6 @@ spec:
       kind: "ClusterRoleBinding"
     - group: "apiextensions.k8s.io"
       kind: "CustomResourceDefinition"
+  namespaceResourceWhitelist:
+    - group: ""
+      kind: Namespace
