--- a/projects/cmdo-project.yaml
+++ b/projects/cmdo-project.yaml
@@ -17,6 +17,10 @@ spec:
       kind: "ClusterRoleBinding"
     - group: "apiextensions.k8s.io"
       kind: "CustomResourceDefinition"
+    - group: ""
+      kind: ConfigMap
   namespaceResourceWhitelist:
     - group: ""
       kind: Namespace
+    - group: ""
+      kind: ConfigMap
