refactor resource whitelists in cmdo-project.yaml for flexibility

--- a/projects/cmdo-project.yaml
+++ b/projects/cmdo-project.yaml
@@ -6,21 +6,13 @@ metadata:
 spec:
   description: "Project to manage applications"
   sourceRepos:
-  - '*'
+  - '*' 
   destinations:
   - namespace: '*'
-    server: '*'
+    server: '*'    
   clusterResourceWhitelist:
-    - group: "rbac.authorization.k8s.io"
-      kind: "ClusterRole"
-    - group: "rbac.authorization.k8s.io"
-      kind: "ClusterRoleBinding"
-    - group: "apiextensions.k8s.io"
-      kind: "CustomResourceDefinition"
-    - group: ""
-      kind: ConfigMap
+    - group: '*'   
+      kind: '*'    
   namespaceResourceWhitelist:
-    - group: ""
-      kind: Namespace
-    - group: ""
-      kind: ConfigMap
+    - group: '*'   
+      kind: '*'    
