update repository URL in argo-workflows-app.yaml

--- a/cmdo-apps/argo-workflows-app.yaml
+++ b/cmdo-apps/argo-workflows-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: cmdo-project
   source:
-    repoURL: "https://github.com/devopsYo/arc.git"
+    repoURL: "https://github.com/devopsYo/argo-workflows.git"
     targetRevision: "HEAD"
     path: "."
   destination:
