rename application metadata names for consistency across configurations

--- a/cmdo-apps/arc-app.yaml
+++ b/cmdo-apps/arc-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: arc-app
+  name: arc
   namespace: argocd
 spec:
   project: cmdo-project
