--- a/cmdo-apps/notification-app.yaml
+++ b/cmdo-apps/notification-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: notification-app
+  name: argocd-notifications
   namespace: argocd
 spec:
   project: cmdo-project
