--- a/cmdo-apps/prometheus-app.yaml
+++ b/cmdo-apps/prometheus-app.yaml
@@ -1,15 +1,15 @@
-#apiVersion: argoproj.io/v1alpha1
-#kind: Application
-#metadata:
-#  name: kube-prometheus-stack
-#  namespace: argocd
-#spec:
-#  project: cmdo-project
-#  source:
-#    repoURL: "https://github.com/devopsYo/prometheus.git"
-#    targetRevision: "HEAD"
-#    path: "."
-#  destination:
-#    server: "https://kubernetes.default.svc"
-#    namespace: "cmdo-prometheus"
-#  syncPolicy: {}
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: kube-prometheus-stack
+  namespace: argocd
+spec:
+  project: cmdo-project
+  source:
+    repoURL: "https://github.com/devopsYo/prometheus.git"
+    targetRevision: "HEAD"
+    path: "."
+  destination:
+    server: "https://kubernetes.default.svc"
+    namespace: "cmdo-prometheus"
+  syncPolicy: {}
