--- a/cmdo-apps/arc-runner-set-apig-app.yaml
+++ b/cmdo-apps/arc-runner-set-apig-app.yaml
@@ -1,18 +1,18 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: arc-runner-set-apig
-  namespace: argocd
-spec:
-  project: cmdo-project
-  source:
-    repoURL: "https://github.com/devopsYo/arc.git"
-    targetRevision: "HEAD"
-    path: "arc-runner-set"
-    helm:
-      valueFiles:
-        - env/dev/apig-values.yaml
-  destination:
-    server: "https://kubernetes.default.svc"
-    namespace: "cmdo-arc-runners-apig"
-  syncPolicy: {}
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: arc-runner-set-apig
+#  namespace: argocd
+#spec:
+#  project: cmdo-project
+#  source:
+#    repoURL: "https://github.com/devopsYo/arc.git"
+#    targetRevision: "HEAD"
+#    path: "arc-runner-set"
+#    helm:
+#      valueFiles:
+#        - env/dev/apig-values.yaml
+#  destination:
+#    server: "https://kubernetes.default.svc"
+#    namespace: "cmdo-arc-runners-apig"
+#  syncPolicy: {}
