--- a/cmdo-apps/istio-istiod.yaml
+++ b/cmdo-apps/istio-istiod.yaml
@@ -1,15 +1,15 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: istio-istiod
-  namespace: argocd
-spec:
-  project: cmdo-project
-  source:
-    repoURL: "https://github.com/devopsYo/istio.git"
-    targetRevision: "HEAD"
-    path: "istio-istiod"
-  destination:
-    server: "https://kubernetes.default.svc"
-    namespace: "istio-system"
-  syncPolicy: {}
+#apiVersion: argoproj.io/v1alpha1
+#kind: Application
+#metadata:
+#  name: istio-istiod
+#  namespace: argocd
+#spec:
+#  project: cmdo-project
+#  source:
+#    repoURL: "https://github.com/devopsYo/istio.git"
+#    targetRevision: "HEAD"
+#    path: "istio-istiod"
+#  destination:
+#    server: "https://kubernetes.default.svc"
+#    namespace: "istio-system"
+#  syncPolicy: {}
